z-index fix

--- a/spacegame/space.css
+++ b/spacegame/space.css
@@ -46,7 +46,7 @@ ul {
 	padding-bottom: 3px;
 	padding-left: 1px;
 	padding-right: 1px;
-	z-index: -1;
+	z-index: 0;
 }
 .gasGiant {
 	color: tan;
@@ -100,7 +100,7 @@ ul {
 }
 #map {
 	font-size: 200%;
-	z-index: -2;
+	z-index: 0;
 }
 #rightinfo {
 	background-color: #224;
